# jackoff

./: .gitignore  Readme.markdown  autogen.sh  configure.ac
src/: Makefile.am  client.c  client.h  driver_sndfile.c  jackoff.c  jackoff.h  logging.c  logging.h  sndfile.c  sndfile.h
